objects/Entities__c.object
<CustomObject>
    <fields>
        <fullName>Date_Form_2553_Accepted__c</fullName>
        <label>Date Form 2553 Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_2553_Completed__c</fullName>
        <inlineHelpText>Date that Form 2553 was submitted to the IRS, either by the client or Anderson.</inlineHelpText>
        <label>Date Form 2553 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_2553_Received__c</fullName>
        <label>Date Form 2553 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_8822_B_Accepted__c</fullName>
        <label>Date Form 8822-B Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_8822_B_Completed__c</fullName>
        <inlineHelpText>Date that Form 8822-B was submitted to the IRS, either by the client or Anderson.</inlineHelpText>
        <label>Date Form 8822-B Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_8822_B_Received__c</fullName>
        <label>Date Form 8822-B Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_8832_Accepted__c</fullName>
        <label>Date Form 8832 Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_8832_Completed__c</fullName>
        <inlineHelpText>Date that Form 8832 was submitted to the IRS, either by the client or Anderson.</inlineHelpText>
        <label>Date Form 8832 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Form_8832_Received__c</fullName>
        <label>Date Form 8832 Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Ledgers_Certs_Received__c</fullName>
        <inlineHelpText>Date that Stock Certificates &amp; Ledgers were received back from the client.</inlineHelpText>
        <label>Date Certificates Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SLA_End__c</fullName>
        <label>Date Initial SLA End</label>
        <summarizedField>SLA__c.Date_SLA_End__c</summarizedField>
        <summaryForeignKey>SLA__c.Pension_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_SLA_began__c</fullName>
        <label>Date Inital SLA Began</label>
        <summarizedField>SLA__c.Date_SLA_Began__c</summarizedField>
        <summaryForeignKey>SLA__c.Pension_Plan__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_Paralegal__c</fullName>
        <description>Date sent to Paralegal</description>
        <inlineHelpText>Date sent to Paralegal</inlineHelpText>
        <label>To Paralegal for Prep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete_Docs__c</fullName>
        <formula>IF((Documents_Complete__c-Questionnaire_to_Processor__c&lt;0), 
CASE(MOD(DateCreated__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Documents_Complete__c-DateCreated__c )/7)*5),
CASE(MOD(Questionnaire_to_Processor__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Documents_Complete__c-Questionnaire_to_Processor__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Documents_Complete__c-Questionnaire_to_Processor__c )/7)*5))</formula>
        <inlineHelpText>(Documents Complete - Questionnaire to Processor), only counting weekdays.</inlineHelpText>
        <label>Days to Complete Docs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete_Entity__c</fullName>
        <formula>IF(OR(Date_Shipped__c-DateCreated__c&lt;0, NOT(RecordTypeId=&apos;012U0000000DE8w&apos;)), 
CASE(MOD(DateCreated__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Documents_Complete__c-DateCreated__c)/7)*5),
CASE(MOD(DateCreated__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Date_Shipped__c-DateCreated__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Date_Shipped__c-DateCreated__c)/7)*5))</formula>
        <inlineHelpText>(Date Shipped - Created Date), only counting weekdays.</inlineHelpText>
        <label>Days to Complete Entity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Complete__c</fullName>
        <formula>IF(DateCreated__c-Case__r.DateOpened__c&lt;0, 
CASE(MOD(DateCreated__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Documents_Complete__c-DateCreated__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Documents_Complete__c-DateCreated__c)/7)*5), 


CASE(MOD(Case__r.DateOpened__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Documents_Complete__c-Case__r.DateOpened__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Documents_Complete__c-Case__r.DateOpened__c)/7)*5))</formula>
        <label>Days to Complete from Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Get_Qs__c</fullName>
        <description>Days to get Q&apos;s from client</description>
        <formula>IF((Questionnaire_to_Processor__c-DateCreated__c&lt;0), 
CASE(MOD(DateCreated__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Documents_Complete__c-DateCreated__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Documents_Complete__c-DateCreated__c )/7)*5),
CASE(MOD(DateCreated__c  - DATE(1985,6,24),7), 
  0 , CASE( MOD(Questionnaire_to_Processor__c-DateCreated__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Questionnaire_to_Processor__c-DateCreated__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Questionnaire_to_Processor__c-DateCreated__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Questionnaire_to_Processor__c-DateCreated__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Questionnaire_to_Processor__c-DateCreated__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Questionnaire_to_Processor__c-DateCreated__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Questionnaire_to_Processor__c-DateCreated__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Questionnaire_to_Processor__c-DateCreated__c )/7)*5))</formula>
        <label>Days to Get Qs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Provide_Q_to_Processor__c</fullName>
        <formula>IF(Questionnaire_to_Processor__c-Case__r.DateOpened__c&lt;0, 
CASE(MOD(Case__r.DateOpened__c- DATE(1985,6,24),7), 
0 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD(  DateCreated__c-Case__r.DateOpened__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR((  DateCreated__c-Case__r.DateOpened__c)/7)*5), 
CASE(MOD(Case__r.DateOpened__c- DATE(1985,6,24),7), 
0 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Questionnaire_to_Processor__c-Case__r.DateOpened__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Questionnaire_to_Processor__c-Case__r.DateOpened__c)/7)*5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Provide Q to Processor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Ship__c</fullName>
        <description>Days to ship docs after docs completed</description>
        <formula>CASE(MOD( Documents_Complete__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( Date_Shipped__c  -  Documents_Complete__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( Date_Shipped__c  -  Documents_Complete__c )/7)*5)</formula>
        <label>Days to Ship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_get_EIN__c</fullName>
        <description>Days to get EIN after articles are back from the state</description>
        <formula>EIN_Received__c  -  Articles_Received_From_State__c</formula>
        <label>Days to get EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deed_Filed_To__c</fullName>
        <label>Deed Filed To...</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deed to LLC</fullName>
                </value>
                <value>
                    <fullName>Deed to Land Trust</fullName>
                </value>
                <value>
                    <fullName>Deed to Living Trust</fullName>
                </value>
                <value>
                    <fullName>Deed to Person</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deed_Holder_Name__c</fullName>
        <label>Deed Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deed_Sent_To_Client__c</fullName>
        <label>Deed Sent To Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deed_Sent_To_County__c</fullName>
        <label>Deed Sent To County</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dir1_Sig_Line__c</fullName>
        <formula>(IF(ISBLANK( Director_1__c ), NULL,
&quot;_______________________________________________ &quot;&amp;
Director_1__c&amp;&quot;, Director&quot;))</formula>
        <label>Dir1 Sig Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dir2_Sig_Line__c</fullName>
        <formula>(IF(ISBLANK( Director_2__c ), NULL,
&quot;_______________________________________________ &quot;&amp;
Director_2__c&amp;&quot;, Director&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dir2 Sig Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dir3_Sig_Line__c</fullName>
        <formula>(IF(ISBLANK( Director_3__c ), NULL,
&quot;_______________________________________________ &quot;&amp;
Director_3__c&amp;&quot;, Director&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dir3 Sig Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_1__c</fullName>
        <label>Director 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_1_of_General_Partner__c</fullName>
        <formula>Corporation_General_Partner__r.Director_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director 1 of General Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_2__c</fullName>
        <label>Director 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_2_of_General_Partner__c</fullName>
        <formula>Corporation_General_Partner__r.Director_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director 2 of General Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_3__c</fullName>
        <label>Director 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_3_of_General_Partner__c</fullName>
        <formula>Corporation_General_Partner__r.Director_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director 3 of General Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Meeting_Date__c</fullName>
        <label>Director Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Director_Meeting_Time__c</fullName>
        <label>Director Meeting Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_name1__c</fullName>
        <label>Director_name1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_name2__c</fullName>
        <label>Director_name2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_name__c</fullName>
        <label>Director_name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable_Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disregarded_To_Personal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disregarded To Personal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entities (Disregarded To Personal)</relationshipLabel>
        <relationshipName>Entities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disregarded_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Disregarded To This Entity</description>
        <label>Disregarded To Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Entities (Disregarded To)</relationshipLabel>
        <relationshipName>Entities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disregarded_to_Entity_Text__c</fullName>
        <formula>Disregarded_To__r.Name</formula>
        <label>Disregarded to Entity Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disregarded_to_Entity_s_EIN__c</fullName>
        <formula>Disregarded_To__r.EIN__c</formula>
        <label>Disregarded to Entity&apos;s EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disregarded_to_Entity_s_Yr_End_Month__c</fullName>
        <formula>Disregarded_To__r.Year_End_Month__c</formula>
        <inlineHelpText>If the entity is disregarded to another entity, this is the month of the year end of the entity it&apos;s disregarded to.</inlineHelpText>
        <label>Disregarded to Entity&apos;s Yr End Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dissolution_Date__c</fullName>
        <label>Dissolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Drafting_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Drafting Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Complete__c</fullName>
        <label>Documents Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Documents_to_Client_for_Review__c</fullName>
        <description>Date the documents were sent to the client for review.</description>
        <inlineHelpText>Date the documents were sent to the client for review.</inlineHelpText>
        <label>Documents to Client for Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Domestic_State__c</fullName>
        <description>This is the entity&apos;s home state, when foreign filed in another state.</description>
        <inlineHelpText>This is the entity&apos;s home state, when foreign filed in another state.</inlineHelpText>
        <label>Domestic State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN_Cancel_Ceased_Op_Drip_Start__c</fullName>
        <label>EIN Cancel (Ceased Op) Drip Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN_Cancel_Never_Started_Drip_Start__c</fullName>
        <label>EIN Cancel (Never Started) Drip Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Ceased_Op_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Cancellation (Ceased Op) Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Ceased_Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Cancellation (Ceased Operations)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Never_Started_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Cancellation(Never Started) Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Cancellation_Never_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Cancellation (Never Started)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Name_Change_Drip_Start__c</fullName>
        <label>EIN Name Change Drip Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN_Name_Change_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Name Change Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Name_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EIN Name Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN_Received__c</fullName>
        <label>EIN Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM1_Address__c</fullName>
        <formula>Managing_Entity__r.Business_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM1 Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EM2_Address__c</fullName>
        <formula>Managing_Entity_2__r.Business_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EM2 Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Initial_SLA__c</fullName>
        <formula>IF(
  Month(Year_End__c)=2 &amp;&amp; Day(Year_End__c)=29, 
  (Year_End__c) +364,
  Date(Year(Year_End__c)+1, Month(Year_End__c), Day(Year_End__c)-1)
  )</formula>
        <label>End Date of Initial SLA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Info_Questionnaire__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4878974?entId=&quot;+Id+&quot;&amp;pcid=&quot;+Primary_Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Info Questionnaire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Member_1_Type__c</fullName>
        <formula>Entity_Member_1__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Member 1 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Member_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Member 1</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Entities (Entity Member 1)</relationshipLabel>
        <relationshipName>Entities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Member_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Member 2</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Entities (Entity Member 2)</relationshipLabel>
        <relationshipName>Entities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Member_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Member 3</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Entities (Entity Member 3)</relationshipLabel>
        <relationshipName>Entities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Number__c</fullName>
        <displayFormat>E-{000000}</displayFormat>
        <label>Unique Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Entity_Owned_By__c</fullName>
        <inlineHelpText>Enter the nature of the relationship between the client and the owner of this entity. NOTE: When this field is filled in, this entity will NOT show up in the client&apos;s Platinum Portal.</inlineHelpText>
        <label>Entity Owned By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s Dad</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s Mom</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s Daughter</fullName>
                </value>
                <value>
                    <fullName>Client&apos;s Son</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Processor_Signature_Storage__c</fullName>
        <label>Entity Processor Signature Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Tax_Status_If_CCorporation__c</fullName>
        <label>Entity Tax Status If CCorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Employee__c</fullName>
        <label>Expected_Employee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federal_Return__c</fullName>
        <formula>IF(
AND(ISPICKVAL(Tax_Form__c, &quot;1120&quot;), AND(MONTH(Year_End__c)=12, DAY(Year_End__c)=31)), &quot;April 15&quot;, 
IF(
AND(ISPICKVAL(Tax_Form__c, &quot;1120&quot;), AND(MONTH(Year_End__c)=10, DAY(Year_End__c)=31)), &quot;February 15&quot;,
IF(
AND(ISPICKVAL(Tax_Form__c, &quot;1120&quot;), AND(MONTH(Year_End__c)=9, DAY(Year_End__c)=30)), &quot;January 15&quot;,
IF(
AND(ISPICKVAL(Tax_Form__c, &quot;1120&quot;), AND(MONTH(Year_End__c)=6, DAY(Year_End__c)=30)), &quot;September 15&quot;,
IF(
AND(ISPICKVAL(Tax_Form__c, &quot;1120&quot;), AND(MONTH(Year_End__c)=3, DAY(Year_End__c)=31)), &quot;July 15&quot;,
IF(
AND(ISPICKVAL(Tax_Status__c, &quot;Partnership&quot;), ISPICKVAL(Tax_Form__c, &quot;1065&quot;)), &quot;March 15&quot;,
IF(
ISPICKVAL(Tax_Form__c, &quot;1120S&quot;), &quot;March 15&quot;,
IF(
AND(ISPICKVAL(Tax_Status__c, &quot;Disregarded Entity&quot;), NOT(ISBLANK(Disregarded_To_Personal__c))), &quot;April 15&quot;,
NULL))))))))</formula>
        <label>Federal Return Due Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fifth_Member_SSN_EIN__c</fullName>
        <label>Fifth Member SSN/EIN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Deed_Received__c</fullName>
        <label>Filed Deed Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filed_Deed_Sent_to_Client__c</fullName>
        <inlineHelpText>Date the &apos;recorded&apos; deed was sent to the client.</inlineHelpText>
        <label>Filed Deed Sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Filing_EIN_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filing &amp; EIN Only</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>